--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,16 @@ form{
     position:relative;
     top:1px;
 }
+.w-400{
+    width: 400px;
+}
+.fs-xs{
+    font-size: 1rem;
+}
+
+.v-10{
+    width: 10px;
+}
+.a {
+    text-decoration: none;
+}
